--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collagist",
+  "name": "materials",
   "version": "0.0.1",
   "description": "Micro frontend site serving",
   "scripts": {
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dazedbear/collagist.git"
+    "url": "git+https://github.com/dazedbear/materials.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dazedbear/collagist/issues"
+    "url": "https://github.com/dazedbear/materials/issues"
   },
-  "homepage": "https://github.com/dazedbear/collagist#readme",
+  "homepage": "https://github.com/dazedbear/materials#readme",
   "husky": {
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
